<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".Fragments.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:layout_margin="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLayoutEmailSignIn"
        android:layout_marginBottom="6dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/txtEmailSignIn"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLayoutPasswordSignIn"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:id="@+id/txtPasswordSignIn"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_round"
        android:text="@string/sign_in"
        android:id="@+id/btnSignIn"
        android:layout_marginBottom="70dp"
        android:textSize="17sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/dont_have_account" />

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="6dp"
            android:text="@string/sign_up" />

    </LinearLayout>
</LinearLayout>